force-app/main/default/objects/Assessment__c/fields/LongTermJobInterest__c.field-meta.xml
<CustomField>
    <fullName>LongTermJobInterest__c</fullName>
    <label>Long Term Job Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AgricultureFoodandNaturalResources</fullName>
                <label>Agriculture, Food, and Natural Resources</label>
            </value>
            <value>
                <fullName>ArchitectureandConstruction</fullName>
                <label>Architecture and Construction</label>
            </value>
            <value>
                <fullName>ArtsAudio/VisualTechnologyandCommunications</fullName>
                <label>Arts, Audio/Visual Technology, and Communications</label>
            </value>
            <value>
                <fullName>BusinessManagementandAdministration</fullName>
                <label>Business Management and Administration</label>
            </value>
            <value>
                <fullName>EducationandTraining</fullName>
                <label>Education and Training</label>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>GovernmentandPublicAdministration</fullName>
                <label>Government and Public Administration</label>
            </value>
            <value>
                <fullName>HealthScience</fullName>
                <label>Health Science</label>
            </value>
            <value>
                <fullName>HumanServices</fullName>
                <label>Human Services</label>
            </value>
            <value>
                <fullName>HospitalityandTourism</fullName>
                <label>Hospitality and Tourism</label>
            </value>
            <value>
                <fullName>InformationTechnology</fullName>
                <label>Information Technology</label>
            </value>
            <value>
                <fullName>LawPublicSafetyCorrectionsandSecurity</fullName>
                <label>Law, Public Safety, Corrections, and Security</label>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>ScienceTechnologyEngineeringandMathematics</fullName>
                <label>Science, Technology, Engineering, and Mathematics</label>
            </value>
            <value>
                <fullName>TransportationDistributionandLogistics</fullName>
                <label>Transportation, Distribution, and Logistics</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>