force-app/main/default/objects/Assessment__c/fields/Mock_Interview_Believability__c.field-meta.xml
<CustomField>
    <fullName>Mock_Interview_Believability__c</fullName>
    <inlineHelpText>How compelling was the candidate in explaining why they want this job? 1 being weak, 5 being neutral, and 10 being excellent.</inlineHelpText>
    <label>Mock Interview: Believability</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>