force-app/main/default/objects/Assessment__c/fields/Mock_Interview_Capability__c.field-meta.xml
<CustomField>
    <fullName>Mock_Interview_Capability__c</fullName>
    <inlineHelpText>How well does this candidate convince you that he/she has the skills &amp; capabilities to perform this job? 1 being weak, 5 being neutral, and 10 being excellent.</inlineHelpText>
    <label>Mock Interview: Capability</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>