force-app/main/default/objects/Assessment__c/fields/Mock_Interview_Likeability__c.field-meta.xml
<CustomField>
    <fullName>Mock_Interview_Likeability__c</fullName>
    <inlineHelpText>How well did the candidate demonstrate that he/she is someone you would want as a colleague? 1 being weak, 5 being neutral, and 10 being excellent.</inlineHelpText>
    <label>Mock Interview: Likeability</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>