force-app/main/default/objects/Assessment__c/fields/Mock_Interview_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Mock_Interview_Outcome__c</fullName>
    <label>Mock Interview Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hire</fullName>
            </value>
            <value>
                <fullName>No Hire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>