force-app/main/default/objects/Assessment__c/fields/Mock_Interview_Position__c.field-meta.xml
<CustomField>
    <fullName>Mock_Interview_Position__c</fullName>
    <label>Mock Interview Position</label>
    <length>25</length>
    <type>Text</type>
</CustomField>