force-app/main/default/objects/Assessment__c/fields/Mock_Interview_Preparedness__c.field-meta.xml
<CustomField>
    <fullName>Mock_Interview_Preparedness__c</fullName>
    <inlineHelpText>How well did this candidate demonstrate their professionalism, preparedness and interest in the position? 1 being weak, 5 being neutral, and 10 being excellent.</inlineHelpText>
    <label>Mock Interview: Preparedness</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>