force-app/main/default/objects/Assessment__c/fields/Mock_Interviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Mock_Interviewer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mock Interviewer Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mock Interviews</relationshipLabel>
    <relationshipName>Assessment1</relationshipName>
    <type>Lookup</type>
</CustomField>