force-app/main/default/objects/Assessment__c/fields/Monthly_Utilities__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Utilities__c</fullName>
    <inlineHelpText>Updated label in Nov 2018 to &quot;Monthly Utilities Paid by Participant&quot;.</inlineHelpText>
    <label>Monthly Utilities Paid by Participant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>