force-app/main/default/objects/Assessment__c/fields/Narrative__c.field-meta.xml
<CustomField>
    <fullName>Narrative__c</fullName>
    <description>ECMv1 required field.</description>
    <label>Narrative</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>