force-app/main/default/objects/Assessment__c/fields/NeedToWorkDuringTraining__c.field-meta.xml
<CustomField>
    <fullName>NeedToWorkDuringTraining__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Financially, would you need to work while in training?</inlineHelpText>
    <label>Need to Work During Training</label>
    <type>Checkbox</type>
</CustomField>