force-app/main/default/objects/Assessment__c/fields/Next__c.field-meta.xml
<CustomField>
    <fullName>Next__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Next assessment for a case record by record type. Maintained by trigger.</description>
    <label>Next</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Next Assessment</relationshipLabel>
    <relationshipName>Next_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>