force-app/main/default/objects/Assessment__c/fields/Number_in_Living_Situation__c.field-meta.xml
<CustomField>
    <fullName>Number_in_Living_Situation__c</fullName>
    <label>Number in Living Situation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>