force-app/main/default/objects/Assessment__c/fields/Number_in_Personal_Household__c.field-meta.xml
<CustomField>
    <fullName>Number_in_Personal_Household__c</fullName>
    <label>Number in Personal Household</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>