force-app/main/default/objects/Assessment__c/fields/Other_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Other_Expenses__c</fullName>
    <inlineHelpText>Other including hair care, children’s allowance, eating out, clothing, going out, cigarettes, etc.</inlineHelpText>
    <label>Other Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>