force-app/main/default/objects/Assessment__c/fields/Other_Income_Supports_Amount__c.field-meta.xml
<CustomField>
    <fullName>Other_Income_Supports_Amount__c</fullName>
    <label>Other Income Supports Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>