force-app/main/default/objects/Assessment__c/fields/OtherAssessmentWhereTaken__c.field-meta.xml
<CustomField>
    <fullName>OtherAssessmentWhereTaken__c</fullName>
    <label>Other Assessment — Where Taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>