force-app/main/default/objects/Assessment__c/fields/OtherCertificatesCredentials__c.field-meta.xml
<CustomField>
    <fullName>OtherCertificatesCredentials__c</fullName>
    <inlineHelpText>Do you have any other certificates or credentials, or degrees? If so, did you earn a credential? If yes, list Title, Institution, Date earned, Credential type.</inlineHelpText>
    <label>Other Certificates / Credentials</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>