force-app/main/default/objects/Assessment__c/fields/OtherJobSearchStepsTaken__c.field-meta.xml
<CustomField>
    <fullName>OtherJobSearchStepsTaken__c</fullName>
    <label>Other (Job Search Steps Taken)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>