force-app/main/default/objects/Assessment__c/fields/OtherPreviousAssessments__c.field-meta.xml
<CustomField>
    <fullName>OtherPreviousAssessments__c</fullName>
    <label>Other (Previous Assessments)</label>
    <type>TextArea</type>
</CustomField>