force-app/main/default/objects/Assessment__c/fields/OtherTrainingStepsAlreadyTaken__c.field-meta.xml
<CustomField>
    <fullName>OtherTrainingStepsAlreadyTaken__c</fullName>
    <label>Other (Training Steps Already Taken)</label>
    <type>TextArea</type>
</CustomField>