force-app/main/default/objects/Assessment__c/fields/Parking_Fees__c.field-meta.xml
<CustomField>
    <fullName>Parking_Fees__c</fullName>
    <label>Parking Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>