force-app/main/default/objects/Assessment__c/fields/Parole_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Parole_End_Date__c</fullName>
    <label>Parole End Date</label>
    <type>Date</type>
</CustomField>