force-app/main/default/objects/Assessment__c/fields/Participant_Preferred_Email__c.field-meta.xml
<CustomField>
    <fullName>Participant_Preferred_Email__c</fullName>
    <formula>Case_Record__r.Main_Client__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Update on Contact Record if incorrect.</inlineHelpText>
    <label>Participant Preferred Email</label>
    <type>Text</type>
</CustomField>