force-app/main/default/objects/Assessment__c/fields/Participant_Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>Participant_Preferred_Phone__c</fullName>
    <formula>Case_Record__r.Preferred_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Update on Contact Record if incorrect.</inlineHelpText>
    <label>Participant Preferred Phone</label>
    <type>Text</type>
</CustomField>