force-app/main/default/objects/Assessment__c/fields/Pay_Child_Support__c.field-meta.xml
<CustomField>
    <fullName>Pay_Child_Support__c</fullName>
    <inlineHelpText>For Clients with minor children not in their custody</inlineHelpText>
    <label>Pay Child Support?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>