force-app/main/default/objects/Assessment__c/fields/Performance__c.field-meta.xml
<CustomField>
    <fullName>Performance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Employed student has been consistently solid in their performance at work.
-Has consistently met the job performance requirements.
-Supervisor confirms student’s account of performance and, if applicable, any performance reviews also reflect it.</inlineHelpText>
    <label>Performance</label>
    <type>Checkbox</type>
</CustomField>