force-app/main/default/objects/Assessment__c/fields/Plan_for_Back_Rent__c.field-meta.xml
<CustomField>
    <fullName>Plan_for_Back_Rent__c</fullName>
    <label>Plan for Back Rent</label>
    <length>150</length>
    <type>Text</type>
</CustomField>