force-app/main/default/objects/Assessment__c/fields/Previous__c.field-meta.xml
<CustomField>
    <fullName>Previous__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previous assessment for a case record based on record type.</description>
    <label>Previous</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Previous Assessment</relationshipLabel>
    <relationshipName>Previous_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>