force-app/main/default/objects/Assessment__c/fields/PreviousAssessments__c.field-meta.xml
<CustomField>
    <fullName>PreviousAssessments__c</fullName>
    <inlineHelpText>Do you know if you&apos;ve taken any of these assessments in the last 6 months? Select all that apply.</inlineHelpText>
    <label>Previous Assessments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TABE</fullName>
            </value>
            <value>
                <fullName>CASAS</fullName>
            </value>
            <value>
                <fullName>ESL</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>