force-app/main/default/objects/Assessment__c/fields/PreviousAssessmentsMayWeContact__c.field-meta.xml
<CustomField>
    <fullName>PreviousAssessmentsMayWeContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previous Assessments: May We Contact</label>
    <type>Checkbox</type>
</CustomField>