force-app/main/default/objects/Assessment__c/fields/PriorJobLikedLeast__c.field-meta.xml
<CustomField>
    <fullName>PriorJobLikedLeast__c</fullName>
    <inlineHelpText>Thinking of your prior jobs, which one did you like the least?</inlineHelpText>
    <label>Prior Job Liked Least</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>