force-app/main/default/objects/Assessment__c/fields/PriorJobLikedMost__c.field-meta.xml
<CustomField>
    <fullName>PriorJobLikedMost__c</fullName>
    <inlineHelpText>Thinking of your prior jobs, which one did you like the most?</inlineHelpText>
    <label>Prior Job Liked Most</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>