force-app/main/default/objects/Assessment__c/fields/Probation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Probation_End_Date__c</fullName>
    <label>Probation End Date</label>
    <type>Date</type>
</CustomField>