force-app/main/default/objects/Assessment__c/fields/Probation_Parole_Officer__c.field-meta.xml
<CustomField>
    <fullName>Probation_Parole_Officer__c</fullName>
    <label>Probation/Parole Officer</label>
    <length>150</length>
    <type>Text</type>
</CustomField>