force-app/main/default/objects/Assessment__c/fields/ProblemsGettingAlongWithOthers__c.field-meta.xml
<CustomField>
    <fullName>ProblemsGettingAlongWithOthers__c</fullName>
    <inlineHelpText>Have you had any problems getting along with others when previously employed? Yes or No</inlineHelpText>
    <label>Problems Getting Along With Others</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>