force-app/main/default/objects/Assessment__c/fields/Professionalism_Hover_for_Prompt_1__c.field-meta.xml
<CustomField>
    <fullName>Professionalism_Hover_for_Prompt_1__c</fullName>
    <inlineHelpText>What do you consider to be professional behavior?</inlineHelpText>
    <label>Professionalism, Hover for Prompt 1</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>