force-app/main/default/objects/Assessment__c/fields/Professionalism_Hover_for_Prompt_2__c.field-meta.xml
<CustomField>
    <fullName>Professionalism_Hover_for_Prompt_2__c</fullName>
    <description>Previous Question: What would you do if you saw a coworker sleeping on the job?</description>
    <inlineHelpText>Have you ever made a mistake at work and what did you do about it?</inlineHelpText>
    <label>Professionalism, Hover for Prompt 2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>