force-app/main/default/objects/Assessment__c/fields/Professionalism_Hover_for_Prompt_3__c.field-meta.xml
<CustomField>
    <fullName>Professionalism_Hover_for_Prompt_3__c</fullName>
    <inlineHelpText>Who is your role model for professionalism and why?</inlineHelpText>
    <label>Professionalism, Hover for Prompt 3</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>