force-app/main/default/objects/Assessment__c/fields/Professionalism_Rating_2__c.field-meta.xml
<CustomField>
    <fullName>Professionalism_Rating_2__c</fullName>
    <inlineHelpText>Does the answer match Cara&apos;s definition of the competency?</inlineHelpText>
    <label>Professionalism, Rating 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>