force-app/main/default/objects/Assessment__c/fields/Public_Aid_Insurance_Self_Report__c.field-meta.xml
<CustomField>
    <fullName>Public_Aid_Insurance_Self_Report__c</fullName>
    <label>Public Aid Insurance (Self Report)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>