force-app/main/default/objects/Assessment__c/fields/Rent_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Rent_Paid_By__c</fullName>
    <description>Revised picklist options in Nov 2018 as part of Incoming Participant Data cleanup. &quot;Subsidy - CHA&quot; and &quot;Subsidy - Section 8&quot; options take the place of former &apos;Involved with CHA&apos; and &apos;Involved with Section 8&apos; Case Record fields.</description>
    <inlineHelpText>Revised picklist options in Nov 2018.</inlineHelpText>
    <label>Additional Rent Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Subsidy</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Shelter/Recovery</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Family/Friend</fullName>
            </value>
            <value>
                <fullName>Subsidy - CHA</fullName>
            </value>
            <value>
                <fullName>Subsidy - Section 8</fullName>
            </value>
            <value>
                <fullName>Subsidy - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>