force-app/main/default/objects/Assessment__c/fields/ResearchedSchoolsPrograms__c.field-meta.xml
<CustomField>
    <fullName>ResearchedSchoolsPrograms__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Have you already researched schools and/or programs?</inlineHelpText>
    <label>Researched Schools / Programs</label>
    <type>Checkbox</type>
</CustomField>