force-app/main/default/objects/Assessment__c/fields/Savings_Account_Bank__c.field-meta.xml
<CustomField>
    <fullName>Savings_Account_Bank__c</fullName>
    <label>Savings Account Bank</label>
    <length>150</length>
    <type>Text</type>
</CustomField>