force-app/main/default/objects/Assessment__c/fields/Savings_Account_Good_Standing__c.field-meta.xml
<CustomField>
    <fullName>Savings_Account_Good_Standing__c</fullName>
    <label>Savings Account Good Standing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>