force-app/main/default/objects/Assessment__c/fields/Self_Referral_Form__c.field-meta.xml
<CustomField>
    <fullName>Self_Referral_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Student has completed and handed in the Advancement self referral form.</inlineHelpText>
    <label>Self Referral Form</label>
    <type>Checkbox</type>
</CustomField>