force-app/main/default/objects/Assessment__c/fields/Self_Selection__c.field-meta.xml
<CustomField>
    <fullName>Self_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Employed student wants, understands, and commits to advancement process. It’s okay if they have some fear.</inlineHelpText>
    <label>Self-Selection</label>
    <type>Checkbox</type>
</CustomField>