force-app/main/default/objects/Assessment__c/fields/Service_Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Entry_Type__c</fullName>
    <formula>Client_Session__r.Service_Entry_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Entry Type</label>
    <type>Text</type>
</CustomField>