force-app/main/default/objects/Assessment__c/fields/Service_Plan__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>When finalizing an assessments, please specify the related Service Plan.</inlineHelpText>
    <label>Related Service Plan</label>
    <referenceTo>Treatment_Plan__c</referenceTo>
    <relationshipLabel>Assessment</relationshipLabel>
    <relationshipName>Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>