force-app/main/default/objects/Assessment__c/fields/Set_a_Financial_Goal__c.field-meta.xml
<CustomField>
    <fullName>Set_a_Financial_Goal__c</fullName>
    <label>Set a Financial Goal</label>
    <type>TextArea</type>
</CustomField>