force-app/main/default/objects/Assessment__c/fields/SkillsAndInterest__c.field-meta.xml
<CustomField>
    <fullName>SkillsAndInterest__c</fullName>
    <label>Skills and Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Mechanical/Trades</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Caretaking</fullName>
            </value>
            <value>
                <fullName>Leadership/Management</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>TeachingTrainingOthers</fullName>
                <label>Teaching/Training Others</label>
            </value>
            <value>
                <fullName>Art/Music</fullName>
            </value>
            <value>
                <fullName>Food Preparation/Service</fullName>
            </value>
            <value>
                <fullName>Customer Service/Retail</fullName>
            </value>
            <value>
                <fullName>Cleaning/Facility Maintenance</fullName>
            </value>
            <value>
                <fullName>Financial/Math/Accounting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>