force-app/main/default/objects/Assessment__c/fields/SkillsToImprove__c.field-meta.xml
<CustomField>
    <fullName>SkillsToImprove__c</fullName>
    <inlineHelpText>What skills would you like to get better at?</inlineHelpText>
    <label>Skills To Improve</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Mechanical/Trades</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Caretaking</fullName>
            </value>
            <value>
                <fullName>Leadership/Management</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Teaching/Training Others</fullName>
            </value>
            <value>
                <fullName>Art/Music</fullName>
            </value>
            <value>
                <fullName>Food Preparation/Service</fullName>
            </value>
            <value>
                <fullName>CustomerService/Retail</fullName>
                <label>Customer Service/Retail</label>
            </value>
            <value>
                <fullName>Cleaning/FacilityMaintenance</fullName>
                <label>Cleaning/Facility Maintenance</label>
            </value>
            <value>
                <fullName>Financial/Math/Accounting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>