force-app/main/default/objects/Assessment__c/fields/Spouse_s_Net_Salary__c.field-meta.xml
<CustomField>
    <fullName>Spouse_s_Net_Salary__c</fullName>
    <label>Spouse&apos;s Net Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>