force-app/main/default/objects/Assessment__c/fields/SSI__c.field-meta.xml
<CustomField>
    <fullName>SSI__c</fullName>
    <label>SSI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>