force-app/main/default/objects/Assessment__c/fields/SSI_SSD_Amount_Self_Report__c.field-meta.xml
<CustomField>
    <fullName>SSI_SSD_Amount_Self_Report__c</fullName>
    <label>SSI/SSD Amount (Self Report</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>