force-app/main/default/objects/Assessment__c/fields/SSID__c.field-meta.xml
<CustomField>
    <fullName>SSID__c</fullName>
    <label>SSID</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>