force-app/main/default/objects/Assessment__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Field set manually by the end user to further categorize an assessment for reporting and other purposes.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intake</fullName>
            </value>
            <value>
                <fullName>Exit</fullName>
            </value>
            <value>
                <fullName>Final Month</fullName>
            </value>
            <value>
                <fullName>3 Month Follow-Up</fullName>
            </value>
            <value>
                <fullName>6 Month Follow-Up</fullName>
            </value>
            <value>
                <fullName>9 Month Follow-Up</fullName>
            </value>
            <value>
                <fullName>12 Month Follow-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>