force-app/main/default/objects/Assessment__c/fields/TABEWhereTaken__c.field-meta.xml
<CustomField>
    <fullName>TABEWhereTaken__c</fullName>
    <label>TABE — Where Taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>