force-app/main/default/objects/Assessment__c/fields/Taken_Where__c.field-meta.xml
<CustomField>
    <fullName>Taken_Where__c</fullName>
    <label>Taken Where?</label>
    <type>TextArea</type>
</CustomField>