force-app/main/default/objects/Assessment__c/fields/TANF__c.field-meta.xml
<CustomField>
    <fullName>TANF__c</fullName>
    <label>TANF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>